--- a/WebServiceInterface/WebServiceInterface/MainForm.resx
+++ b/WebServiceInterface/WebServiceInterface/MainForm.resx
@@ -117,7 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
+  </data>
+  <data name="Error_ResponseDisplay_Caption" xml:space="preserve">
+    <value>Display Error</value>
+    <comment>Used for a message box caption for when an error occurrs displaying the SOAP response.</comment>
+  </data>
+  <data name="Error_ResponseDisplay_Message" xml:space="preserve">
+    <value>An error occurred displaying the web service response. This may be caused by the resonse being in an unexpected or invalid format.</value>
+    <comment>Used for when an error occurs trying to display the SOAP response.</comment>
+  </data>
 </root>
